--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node proxyserver.js"
   },
   "author": "KriptoLumen Technologies LLP",
   "license": "ISC"
